# spipe

./: Cargo.toml  readme.md
src/: cli.rs  format.rs  main.rs
src/checker/: mod.rs
src/diagnostics/: maneger.rs  mod.rs  report.rs
src/emiter/: mod.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/utils/: mod.rs  range.rs  source.rs
tests/playground/: above_avg_orders.sql  active_customers.sql  moving_avg_sales.sql  orders_and_sales_by_customer.sql  orders_by_customers.sql  sales_by_customer_and_category.sql  total_sales_by_customer.sql
