[package]
name = "hoshi"
description = "Rust-based, An efficient, pipe-powered SQL compiler"
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
code_highlighter = "0.1.1"
serde = { version = "1.0.204", features = ["derive"] }
